Quorum3/Library/Tests/TypeChecker/Pass/TextGetSubtextWithEnd.quorum
class Main
    action Main
        Text t 
        t:SetValue("hello")
        text p = "hello"

        output t:GetSubtext(0, 2)
        output p:GetSubtext(0, 2)
    end
end